fixed nav layout on small screens with inline block

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,7 @@ body h1 {
     .nav li {
         margin-left:5px;
         margin-right:5px;
+        display: inline-block;
     }
 
 }
